--- a/hw-site3/index.html
+++ b/hw-site3/index.html
@@ -138,19 +138,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="main-flex2">
-          <div class="button-group">
-            <button class="button1">
-              <p>Buy Now</p>
-            </button>
-            <button class="button2">
-              <p>Add To Cart</p>
-            </button>
-          </div>
-          <span class="dollar">
-            <p>120$</p>
-          </span>
-        </div> -->
       </div>
     </div>
     <div class="main4">
@@ -272,321 +259,424 @@
           </div>
           <div class="rightfooter">
             <div class="contactinfo">
-              <p class="contact2">
-                <p class="contacttitle">Contact Us</p>
-                <p>oyasimnaeem@email.com</p>
-                <p>+123456789</p>
-                <img src="./img/medialink.png" alt="#" class="medialink">
-              </p>
+              <p class="contact2"></p>
+              <p class="contacttitle">Contact Us</p>
+              <p>oyasimnaeem@email.com</p>
+              <p>+123456789</p>
+              <img src="./img/medialink.png" alt="#" class="medialink" />
             </div>
           </div>
         </div>
       </div>
     </footer>
     <style>
-      .container {
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-      .bg-container {
-        max-width: 1440px;
-        margin: 0 auto;
-        height: 100%;
-        background-image: url(./bg.jpg);
-        background-repeat: no-repeat;
-        background-position: 938px -10px;
-      }
-      .header {
-        background-color: #f9f6f5;
-      }
-      .dudeshape {
-        font-family: red hat display;
-        color: #222222;
-        font-weight: 700;
-        font-size: 24px;
-      }
-      .wrapper_nav ul li {
-        font-family: red hat display;
-        font-weight: 400;
-        font-size: 16px;
-        color: black;
-        display: flex;
-        margin: 15px 25px 0 25px;
-      }
-      .wrapper {
-        display: flex;
-        justify-content: space-between;
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-      .nav-items {
-        display: inline-flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      .main__title {
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 56px;
-        line-height: 70px;
-      }
-      .main__info {
-        font-family: red hat display;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 32px;
-        margin:0;
-      }
-      .info {
-        font-family: red hat display;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 32px;
-        margin:0;
-      }
-      .search-button {
-        padding-block: 0px;
-        padding-inline: 0px;
-      }
-      .box {
-        padding: 10px 77px;
-        position: relative;
-      }
-      .search2 {
-        position: absolute;
-        /* top: 577px;
-        left: 170px; */
-        top:64%;
-        left:2%;
-        font-family: red hat display;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 20px;
-      }
-      .search-button {
-        position: absolute;
-        top: 65%;
-        left: 24%;
-        margin: -3px 0px 0px 0px;
-      }
-      .container__relative {
-        position: relative;
-      }
-      .wrapper__login-menu {
-        margin: 23px 0px 0 0px;
-      }
-      .shop-now {
-        background-color: #402f2c;
-        color: white;
-        padding: 16px 32px 16px 32px;
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 24px;
-        margin-top: 45px;
-      }
-      .logo-box {
-        margin: 130px 25px 130px 25px;
-      }
-      .product {
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 56px;
-        line-height: 70px;
-      }
-      .product2 {
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 30px;
-        color: #222222;
-        margin-top: 60px;
-      }
-      .main-flex2 {
-        display: flex;
-        justify-content: space-between;
-      }
-      .button-group {
-        display: flex;
-        justify-content: space-between;
-        /* width: 323px;
-        height: 56px; */
-        border: 1px;
-        margin-right: 150px;
-      }
-      .button__black {
-        background-color: #402f2c;
-        color: white;
-        padding: 16px 32px 16px 32px;
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 24px;
-      }
-      .button__white {
-        background-color: white;
-        color: #402f2c;
-        padding: 16px 32px 16px 32px;
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 24px;
-      }
-      .buttontext1 {
-        margin: 0 0;
-      }
-      .dollar {
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 55px;
-        text-align: right;
-      }
-      .flex-main4 {
-        display: flex;
-        justify-content: space-between;
-        font-family: red hat display;
-        font-weight: 700;
-        font-size: 56px;
-        line-height: 70px;
-        margin: 130px 50px 130px 50px;
-      }
-      .customar {
-        border-bottom: 3px solid black;
-      }
-      .sale {
-        border-bottom: 3px solid black;
-      }
-      .organic-value {
-        border-bottom: 3px solid black;
-      }
-      .main5 {
-        display: flex;
-        justify-content: space-between;
-      }
-      .product {
-        margin: 0px 0px 20px 0;
-      }
-      .info {
-        margin:60px 0;
-      }
-      .amazing {
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 40px;
-        margin: 0;
-      }
-      .flex-box4 {
-        display: flex;
-        justify-content: space-between;
-      }
-      .stars {
-        margin: 100px 0 0 54px;
-      }
-      .smile {
-        margin: 100px 0 0 0;
-      }
-      .flex-box5 {
-        display: flex;
-        justify-content: space-between;
-        border-bottom: 1px solid #dddddd;
-        margin-top: 100px;
-      }
-      .subscribe {
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 36px;
-        line-height: 46px;
-      }
-      .box2 {
-        position: relative;
-        width: 386px;
-        height: 56px;
-        margin-top: 20px;
-        border: 1px solid #dddddd;
-      }
-      .email {
-        position: absolute;
-        top: 6%;
-        left: 70%;
-        font-weight: 400;
-        font-family: red hat display;
-        font-size: 16px;
-      }
-      .subscribe-button {
-        position: absolute;
-        width: 103px;
-        height: 40px;
-        top: 7%;
-        left: 91%;
-        background-color: black;
-      }
-      .subscribe-button-color {
-        color: white;
-        font-family: red hat display;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 20px;
-        margin-top: 8px;
-      }
-      .flex-box6 {
-        display: flex;
-        justify-content: space-between;
-      }
-      .dudeshape2 {
-        font-family: red hat display;
-        color: #222222;
-        font-weight: 700;
-        font-size: 24px;
-      }
-      .nav-items2 {
-        display:flex;
-        flex-direction: column;
-        row-gap:30px;
-        margin: 30px;
-      }
-      .rightfooter {
-        display: flex;
-    flex-direction: column;
-    row-gap: 0px;
-    font-family: 'Red Hat Display';
-      }
-      .main4 {
-        background-color:#FDF8F5;
-      }
-      .nav-items2 {
-        font-family: red hat display;
-    font-weight: 400;
-    font-size: 16px;
-      }
-      .cosmetic {
-        font-family: red hat display;
-        font-weight: 500;
-        font-size:40px;
-        line-height: 60px;
-      }
-      .beauty {
-        margin: 130px 0 130px 0;
-      }
-      .leftfooter {
-        margin: 0px 0px 50px 100px;
-      }
-      .contactinfo {
-        margin: 15px 50px 0px 0;
-      }
-      .info_info2 {
-        margin:0;
-      }
-      .info_designer {
-        margin:0;
-      }
-      .nav-item {
-        display:flex;
-      }
-      .nav-item__black {
-        color:black;
-      }
+        .container {
+          max-width: 1200px;
+          margin: 0 auto;
+        }
+        @media screen and (max-width: 800px) {
+          .container {
+            padding: 0 15px;
+          }
+          .bg-container {
+            padding: 0 15px;
+          }
+        }
+        .bg-container {
+          max-width: 1440px;
+          margin: 0 auto;
+          height: 100%;
+          background-image: url(./bg.jpg);
+          background-repeat: no-repeat;
+          background-position: 938px -10px;
+        }
+        .header {
+          background-color: #f9f6f5;
+        }
+        @media screen and (max-width: 800px) {
+          .wrapper {
+            flex-direction: column;
+          }
+          .nav-items {
+            flex-direction: column;
+            padding: 0px;
+          }
+        }
+        .dudeshape {
+          font-family: red hat display;
+          color: #222222;
+          font-weight: 700;
+          font-size: 24px;
+        }
+        .wrapper_nav ul li {
+          font-family: red hat display;
+          font-weight: 400;
+          font-size: 16px;
+          color: black;
+          display: flex;
+          margin: 15px 25px 0 25px;
+        }
+        .wrapper {
+          display: flex;
+          justify-content: space-between;
+          max-width: 1200px;
+          margin: 0 auto;
+        }
+        .nav-items {
+          display: inline-flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+        .main__title {
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 56px;
+          line-height: 70px;
+        }
+        @media screen and (max-width:800px) {
+          .main__title {
+            font-size: 40px;
+
+          }
+        }
+        @media screen and (max-width:800px) {
+          .main__left {
+
+            max-width:100%
+
+          }
+        }
+        .main__info {
+          font-family: red hat display;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 32px;
+          margin:0;
+        }
+        .info {
+          font-family: red hat display;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 32px;
+          margin:0;
+        }
+        .search-button {
+          padding-block: 0px;
+          padding-inline: 0px;
+        }
+        .box {
+          padding: 10px 77px;
+          position: relative;
+        }
+        .search2 {
+          position: absolute;
+          /* top: 577px;
+          left: 170px; */
+          top:64%;
+          left:2%;
+          font-family: red hat display;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 20px;
+        }
+        @media screen and (max-width: 800px) {
+          .search2 {
+            top:0%;
+            left:0%;
+            margin:-22px 0 0 0;
+          }
+          .search-button {
+            top:0%;
+            left:0%
+            margin: -3px 0 0 -35px;
+          }
+        }
+        .search-button {
+          position: absolute;
+          top: 65%;
+          left: 24%;
+          margin: -3px 0px 0px 0px;
+        }
+        .container__relative {
+          position: relative;
+        }
+        .wrapper__login-menu {
+          margin: 23px 0px 0 0px;
+        }
+        .shop-now {
+          background-color: #402f2c;
+          color: white;
+          padding: 16px 32px 16px 32px;
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 24px;
+          margin-top: 45px;
+        }
+        .logo-box {
+          margin: 130px 25px 130px 25px;
+        }
+        .product {
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 56px;
+          line-height: 70px;
+        }
+        .product2 {
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 24px;
+          line-height: 30px;
+          color: #222222;
+          margin-top: 60px;
+        }
+        .main-flex2 {
+          display: flex;
+          justify-content: space-between;
+
+        }
+        .button-group {
+          display: flex;
+          justify-content: space-between;
+          /* width: 323px;
+          height: 56px; */
+          border: 1px;
+          margin-right: 150px;
+        }
+        @media screen and (max-width: 800px) {
+          .button-group {
+            gap:25px;
+            margin: 0px 0 15px 0px;
+          }
+          .product2 {
+            margin-bottom:15px;
+          }
+          .main-flex2 {
+            display: flex;
+            flex-direction: column;
+          }
+          .bottle1 {
+            max-width:100%;
+          }
+          .bottle2 {
+            max-width:100%;
+          }
+        }
+        .button__black {
+          background-color: #402f2c;
+          color: white;
+          padding: 16px 32px 16px 32px;
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 24px;
+        }
+        .button__white {
+          background-color: white;
+          color: #402f2c;
+          padding: 16px 32px 16px 32px;
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 24px;
+        }
+        .buttontext1 {
+          margin: 0 0;
+        }
+        .dollar {
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 30px;
+          line-height: 55px;
+          text-align: right;
+        }
+        .flex-main4 {
+          display: flex;
+          justify-content: space-between;
+          font-family: red hat display;
+          font-weight: 700;
+          font-size: 56px;
+          line-height: 70px;
+          margin: 130px 50px 130px 50px;
+        }
+
+        @media screen and (max-width: 800px) {
+          .flex-main4 {
+            font-size:40px;
+            flex-direction: column;
+          }
+          .part2 {
+            max-width: 100%;
+          }
+        }
+        .customar {
+          border-bottom: 3px solid black;
+        }
+        .sale {
+          border-bottom: 3px solid black;
+        }
+        .organic-value {
+          border-bottom: 3px solid black;
+        }
+        .main5 {
+          display: flex;
+          justify-content: space-between;
+        }
+        @media screen and (max-width:800px) {
+          .main5 {
+            display:flex;
+            flex-direction: column;
+          }
+          .shop-now {
+            margin-bottom:20px;
+          }
+        }
+        .product {
+          margin: 0px 0px 20px 0;
+        }
+        .info {
+          margin:60px 0;
+        }
+        .amazing {
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 30px;
+          line-height: 40px;
+          margin: 0;
+        }
+        .flex-box4 {
+          display: flex;
+          justify-content: space-between;
+        }
+        @media screen and (max-width: 800px) {
+          .flex-box4 {
+            flex-direction: column;
+          }
+          .smilee {
+            max-width: 100%;
+          }
+          .bottle3 {
+            max-width: 100%;
+          }
+
+        }
+        .stars {
+          margin: 100px 0 0 54px;
+        }
+        .smile {
+          margin: 100px 0 0 0;
+        }
+        .flex-box5 {
+          display: flex;
+          justify-content: space-between;
+          border-bottom: 1px solid #dddddd;
+          margin-top: 100px;
+        }
+        .subscribe {
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 36px;
+          line-height: 46px;
+        }
+        .box2 {
+          position: relative;
+          max-width: 386px;
+          height: 56px;
+          margin-top: 20px;
+          border: 1px solid #dddddd;
+        }
+        .email {
+          position: absolute;
+          top: 6%;
+          left: 70%;
+          font-weight: 400;
+          font-family: red hat display;
+          font-size: 16px;
+        }
+        .subscribe-button {
+          position: absolute;
+          width: 103px;
+          height: 40px;
+          top: 7%;
+          left: 91%;
+          background-color: black;
+        }
+        .subscribe-button-color {
+          color: white;
+          font-family: red hat display;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 20px;
+          margin-top: 8px;
+        }
+        .flex-box6 {
+          display: flex;
+          justify-content: space-between;
+        }
+        @media screen and (max-width:800px) {
+          .flex-box6 {
+            flex-direction: column;
+          }
+          .flex-box5 {
+            flex-direction: column;
+          }
+          .subscribe {
+            font-size:22px;
+          }
+        }
+        .dudeshape2 {
+          font-family: red hat display;
+          color: #222222;
+          font-weight: 700;
+          font-size: 24px;
+        }
+        .nav-items2 {
+          display:flex;
+          flex-direction: column;
+          row-gap:30px;
+          margin: 30px;
+        }
+        .rightfooter {
+          display: flex;
+      flex-direction: column;
+      row-gap: 0px;
+      font-family: 'Red Hat Display';
+        }
+        .main4 {
+          background-color:#FDF8F5;
+        }
+        .nav-items2 {
+          font-family: red hat display;
+      font-weight: 400;
+      font-size: 16px;
+        }
+        .cosmetic {
+          font-family: red hat display;
+          font-weight: 500;
+          font-size:40px;
+          line-height: 60px;
+        }
+        .beauty {
+          margin: 130px 0 130px 0;
+        }
+        .leftfooter {
+          margin: 0px 0px 50px 100px;
+        }
+        .contactinfo {
+          margin: 15px 50px 0px 0;
+        }
+        .info_info2 {
+          margin:0;
+        }
+        .info_designer {
+          margin:0;
+        }
+        .nav-item {
+          display:flex;
+        }
+        .nav-item__black {
+          color:black;
+        }
     </style>
   </body>
 </html>
