add homework menu

--- a/hw burger/index.html
+++ b/hw burger/index.html
@@ -67,7 +67,7 @@
         border: 0;
         box-sizing: border-box;
       }
-      .burger-menu {
+      /* .burger-menu {
         display: flex;
         flex-direction: row;
         height: 30px;
@@ -75,7 +75,7 @@
         justify-content: space-between;
         align-items: center;
         margin-bottom: 15px;
-      }
+      } */
       .menu {
         background-color: black;
         /* height: 100%;
