--- a/hw-site3/index.html
+++ b/hw-site3/index.html
@@ -372,6 +372,11 @@
           justify-content: space-between;
           margin: 80px 0 80px 0;
         }
+        @media screen and (max-width: 800px) {
+          .main__right {
+            max-width: 100%;
+          }
+        }
         .logo-items li {
           position:relative;
           padding-bottom: 10px;
