add final chapter 1

--- a/final-hw/index.html
+++ b/final-hw/index.html
@@ -111,14 +111,32 @@
             <p class="artist1">MrFox</p>
           </div>
           <div class="main2__center">
-            <div class="grid-container2"></div>
-            <h5 class="magic"></h5>
-            <p class="artist2"></p>
+            <div class="grid-container2">
+              <img src="./img/grib.png" alt="#" class="grib-b" />
+              <img src="./img/leviigrib.png" alt="#" class="grib-l" />
+              <img src="./img/praviigrib.png" alt="#" class="grib-r" />
+              <img
+                src="./img/Number of additional NFTs.png"
+                alt="#"
+                class="number2"
+              />
+            </div>
+            <h5 class="magic">Magic Mushrooms</h5>
+            <p class="artist2">Shroomie</p>
           </div>
           <div class="main2__right">
-            <div class="grid-container3"></div>
-            <h5 class="disco"></h5>
-            <p class="artist3"></p>
+            <div class="grid-container3">
+              <img src="./img/robot.png" alt="#" class="robot" />
+              <img src="./img/leviirobot.png" alt="#" class="robot-l" />
+              <img src="./img/parviirobot.png" alt="#" class="robot-r" />
+              <img
+                src="./img/Number of additional NFTs.png"
+                alt="#"
+                class="number3"
+              />
+            </div>
+            <h5 class="disco">Disco Machines</h5>
+            <p class="artist3">BeKind2Robots</p>
           </div>
         </div>
       </div>
