add changes to hw-final

--- a/final-hw/index.html
+++ b/final-hw/index.html
@@ -32,7 +32,7 @@
                 <a href="#" class="Connect"><p>Connect</p> </a>
               </li>
               <li class="nav-item-signup">
-                <a href="#" class="SignUp"> <p>Sign Up</p></a>
+                <a href="#" class="SignUp"> <p class="su">Sign Up</p></a>
               </li>
             </ul>
           </div>
@@ -47,13 +47,12 @@
           </div>
           <div class="main__info">
             <p>
-              NFT marketplace UI created with Anima for<br />
-              Figma. Collect, buy and sell art from more<br />
-              than 20k NFT artists.
+              NFT marketplace UI created with Anima for Figma. Collect, buy and
+              sell art from more than 20k NFT artists.
             </p>
           </div>
           <div class="main__get-started">
-            <a href="#" class="start"><p>Get Started</p></a>
+            <a href="#" class="start"><p class="started">Get Started</p></a>
           </div>
           <div class="flex-container__sale">
             <div class="first">
